fix: Title header horizontall alignment
When using letter spacing it is needed to set a left padding the same size as the letter spacing so the content is balanced and centered. Further padding is added to a parent element.

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,7 @@ nav {
 
 nav h1 {
   text-align: center;
+  padding: 0 10px;
   margin: auto;
 }
 
@@ -126,7 +127,7 @@ nav h1 a {
   color: #fff;
   font-weight: 200;
   letter-spacing: 10px;
-  padding: 0 20px;
+  padding: 0 0 0 10px;
   text-transform: uppercase;
 }
 
